need to work on app.test.js and original index.js

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tiffani's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="../app/stylesheets/index.css">
-    <link rel="stylesheet" href="../app/stylesheets/animations.css">
+    <link rel="stylesheet" type="text/css" href="../src/index.css">
+    <link rel="stylesheet" href="../src/animations.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="../app/stylesheets/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../app/stylesheets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
