--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- Load the Paper.js library -->
     </script>
-    <script type="text/javascript" src="dist/paper-full.js"></script>
+    <script type="text/javascript" src="../node_modules/paper/dist/paper-full.js"></script>
     <script type="text/javascript" src="http://paperjs.org/assets/js/rhill-voronoi-core.js"></script>
     <script type="text/paperscript" canvas="canvas">
         var voronoi =  new Voronoi();
