--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Tiffani's Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
-</head>
-<body>
-  <div id="app"></div>
-  <script src="bundle.js"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Tiffani's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="../src/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
+    <link type="text/css" type="text/css" href="../src/index.css">
     <link rel="stylesheet" href="../src/animations.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../src/index.css">
+    <link rel="stylesheet" href="../src/animations.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
   
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
 
     <!-- Load the Paper.js library -->
-    </script>
-    <script type="text/javascript" src="../node_modules/paper/dist/paper-full.js"></script>
+    <!-- </script> -->
+    <script type="text/javascript" src="../src/paper/paper-full.js"></script>
+    <script type="text/javascript" src="../src/paper/paper.js"></script>
     <script type="text/javascript" src="http://paperjs.org/assets/js/rhill-voronoi-core.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-core.min.js"></script>
+    <link src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-core.min.js">
     <script type="text/paperscript" canvas="canvas">
         var voronoi =  new Voronoi();
         var sites = generateBeeHivePoints(view.size / 200, true);
@@ -159,5 +152,5 @@
     </div>
   </div>
   <div id="app"></div>
-  <script src="bundle.js"></script>
+  <!-- <script src="bundle.js"></script> -->
   </body>
