--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Tiffani's Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
     <link type="text/css" type="text/css" href="../src/index.css">
+   <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"> -->
+    
     <link rel="stylesheet" href="../src/animations.css">
     <!-- <link rel="stylesheet" type="text/css" href="../src/index.css">
     <link rel="stylesheet" href="../src/animations.css"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
     <link rel="icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../src/_global/assets/images/favicon.ico" type="image/x-icon">
   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"> -->
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
 
+  
     <!-- Load the Paper.js library -->
-    <!-- </script> -->
-    <script type="text/javascript" src="../src/paper/paper-full.js"></script>
-    <script type="text/javascript" src="../src/paper/paper.js"></script>
+    <script type="text/javascript" src="../src/dist/paper-full.js"></script>
     <script type="text/javascript" src="http://paperjs.org/assets/js/rhill-voronoi-core.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-core.min.js"></script>
-    <link src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.22/paper-core.min.js">
     <script type="text/paperscript" canvas="canvas">
         var voronoi =  new Voronoi();
         var sites = generateBeeHivePoints(view.size / 200, true);
@@ -135,7 +138,12 @@
             }
         }
     </script>
-    
+    <style type="text/css">
+    canvas, canvas[resize] {
+        width: 100%;
+        height: 95vh;
+        }
+    </style>
   </head>
   <body>
 
@@ -144,13 +152,11 @@
   <div class="paperscript">
     <div class="canvas">
       <canvas resize="true" id="canvas" width="1260" height="784" data-paper-scope="1" style="-webkit-user-drag: none; user-select: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></canvas>
-      <div class="cartoon">
-        <!-- <div class="cartoon-title"><p>comingSoon</p></div> -->
-        <div class="cartoon-image hatch"></div>
-        <!-- <img class="cartoon-image" src="../public/css/images/cartoonshot.png"> -->
-      </div>
+      <!-- <div class="cartoon hatch">
+        <div class="cartoon-image"></div>
+        <img class="cartoon-image" src="../public/css/images/cartoonshot.png">-->
     </div>
   </div>
   <div id="app"></div>
-  <!-- <script src="bundle.js"></script> -->
   </body>
+
